[package]
name = "self_sovereign_ai"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.0" }
reqwest = { version = "0.12.23", features = ["json"] }
nostr = "0.43.1"
pkarr = "3.8.0"
tokio =  { version = "1.46.1", features = ["full"] }
rustls = "0.23.28"
openssl = "0.10.72"
ring = "0.17.14"