[package]
name = "self_sovereign_ai"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.0" }
reqwest = { version = "0.12.24", features = ["json"] }
nostr = "0.44.0"
pkarr = "5.0.0"
tokio =  { version = "1.48.0", features = ["full"] }
rustls = "0.23.35"
openssl = "0.10.75"
ring = "0.17.14"